<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:orientation="vertical" >

    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/toast_frame"
        android:paddingTop="3dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingBottom="5dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="7dp"
        android:background="@drawable/rounded_white_background"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/loUploader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imgAvatar"
                android:adjustViewBounds="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:maxWidth="20dp"
                android:maxHeight="20dp"
                android:layout_gravity="center"
                android:layout_marginLeft="3dip"
                android:layout_marginTop="3dip"
                android:contentDescription="@string/des_icon_math"
                android:src="@drawable/avatar_placeholder" />

            <org.holoeverywhere.widget.TextView
                android:id="@+id/tv_des_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@+id/imgAvatar"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="2dip"
                android:text="@string/des_title_math"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </RelativeLayout>

        <com.eas.elearning.customview.ResizableImageView
            android:id="@+id/img_thumb_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dip"
            android:layout_marginRight="0dip"
            android:layout_marginTop="5dip"
            android:padding="0dip"
            android:layout_below="@+id/loUploader"
            android:src="@drawable/math_thumb" >
            
        </com.eas.elearning.customview.ResizableImageView>

        <org.holoeverywhere.widget.TextView
            android:id="@+id/tv_title_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="5dip"
            android:text="@string/title_sub"
            android:textColor="@color/light_blue"
            android:textStyle="bold"
            android:layout_below="@+id/img_thumb_sub"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title_sub" >

            <org.holoeverywhere.widget.TextView
                android:id="@+id/tv_viewss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="5dip"
                android:text="@string/view"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <org.holoeverywhere.widget.TextView
                android:id="@+id/tv_downloads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_viewss"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="3dip"
                android:textStyle="bold"
                android:text="@string/download"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <org.holoeverywhere.widget.TextView
                android:id="@+id/tv_commentss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_downloads"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="3dip"
                android:textStyle="bold"
                android:text="@string/comment"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <org.holoeverywhere.widget.TextView
                android:id="@+id/tv_views"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tv_downloads"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/tv_viewss"
                android:text="@string/view_count"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <org.holoeverywhere.widget.TextView
                android:id="@+id/tv_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tv_commentss"
                android:layout_alignLeft="@+id/tv_views"
                android:text="@string/downloads"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <org.holoeverywhere.widget.TextView
                android:id="@+id/tv_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_commentss"
                android:layout_alignBottom="@+id/tv_commentss"
                android:layout_alignLeft="@+id/tv_download"
                android:text="@string/comments"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </RelativeLayout>

        <View
            android:id="@+id/view"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="@color/red" 
            android:layout_marginTop="5dip"/>
    </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>