<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="#EDC97A"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:background="@drawable/purple_background"
            android:onClick="onClickBack"
            android:src="@drawable/icon_back" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/info_account"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/info_account"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5" >

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:src="@drawable/avatar_placeholder2"
            android:layout_marginLeft="15dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tvname_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="Hoai Le"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/class_student"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tvname_class"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="9C"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/school"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tvname_school"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="THCS Bình Minh"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/p_info_account"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fullname"
            android:textColor="@android:color/black" />
        <TextView
            android:id="@+id/tvfullname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Lê Thị Thanh Hoài"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black" />
    </LinearLayout>
 <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:textColor="@android:color/black" />
        <TextView
            android:id="@+id/tvbirthday"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="27/02/1990"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black" />
    </LinearLayout>
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender1"
            android:textColor="@android:color/black" />
        <TextView
            android:id="@+id/tvGender"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Nữ"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@android:color/black" />
        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="hoailtt@gmail.com"
            android:paddingLeft="5dp"
            android:textColor="@android:color/black" />
    </LinearLayout>
</LinearLayout>