<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E5E5E5"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layoutSuperMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:background="@drawable/toast_frame"
        android:gravity="center"
        android:paddingBottom="3dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:paddingTop="3dp" >

        <RelativeLayout
            android:id="@+id/layoutmain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_white_background"
            android:orientation="vertical">
            <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:paddingTop="7dp">

            <org.holoeverywhere.widget.TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:paddingLeft="7dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/doc_detail_header_title"
                android:textSize="16sp"
                android:textStyle="bold" />

            

            <org.holoeverywhere.widget.TextView
                android:id="@+id/tvDes"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTitle"
                android:layout_marginTop="7dp"
                android:textSize="13sp"
                android:text="@string/doc_detail_header_des" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="0.75dp"
                android:layout_below="@+id/tvDes"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:background="#C0C0C0" />

            <RelativeLayout
                android:id="@+id/layoutCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" 
                android:layout_below="@+id/line"
                android:paddingLeft="7dp">

                <org.holoeverywhere.widget.TextView
                    android:id="@+id/tvViewCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/doc_detail_view_count"
                    android:textSize="12sp"
                    android:textColor="#808080" />

                <org.holoeverywhere.widget.TextView
                    android:id="@+id/tvViewCountLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tvViewCount"
                    android:layout_marginRight="7dp"
                    android:textSize="12sp"
                    android:text="@string/doc_detail_view_count_label"
                    android:textColor="#808080" />

                <org.holoeverywhere.widget.TextView
                    android:id="@+id/tvDownloadCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tvViewCountLabel"
                    android:textSize="12sp"
                    android:text="@string/doc_detail_download_count"
                    android:textColor="#808080" />

                <org.holoeverywhere.widget.TextView
                    android:id="@+id/tvDownloadCountLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tvDownloadCount"
                    android:layout_marginRight="7dp"
                    android:textSize="12sp"
                    android:text="@string/doc_detail_downloaf_count_label"
                    android:textColor="#808080" />

                <org.holoeverywhere.widget.TextView
                    android:id="@+id/tvCommentCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tvDownloadCountLabel"
                    android:textSize="12sp"
                    android:text="@string/doc_detail_comment_count"
                    android:textColor="#808080" />

                <org.holoeverywhere.widget.TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tvCommentCount"
                    android:textSize="12sp"
                    android:text="@string/doc_detail_comment_count_label"
                    android:textColor="#808080" />
            </RelativeLayout>
            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_below="@+id/layoutCount"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:background="#C0C0C0" />

            <org.holoeverywhere.widget.TextView
                android:id="@+id/tvRelated"
                android:layout_below="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@drawable/blue_background"
                android:clickable="true"
                android:onClick="onClick"
                android:padding="7dp"
                android:text="@string/doc_detail_related_doc"
                android:textColor="#33b5e5" />

        </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_below="@+id/layoutSuperMain"
    android:layout_centerHorizontal="true"
    android:padding="0dp">
    <org.holoeverywhere.widget.ProgressBar 
            android:id="@+id/prBarCmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
     <org.holoeverywhere.widget.ImageButton
            android:id="@+id/btnRetryCmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_refresh"
            android:background="@drawable/blue_background"
            android:visibility="gone"/>
    </RelativeLayout>

</RelativeLayout>